# darknet_catkin

./: CMakeLists.txt  CMakeListsBackup.txt  package.xml
include/: activation_layer.h  activations.h  avgpool_layer.h  batchnorm_layer.h  blas.h  box.h  classifier.h  col2im.h  connected_layer.h  conv_lstm_layer.h  convolutional_layer.h  cost_layer.h  crnn_layer.h  crop_layer.h  dark_cuda.h  darknet.h  data.h  deconvolutional_layer.h  demo.h  detection_layer.h  dropout_layer.h  gemm.h  gru_layer.h  http_stream.h  im2col.h  image.h  image_opencv.h  layer.h  list.h  local_layer.h  lstm_layer.h  matrix.h  maxpool_layer.h  network.h  normalization_layer.h  option_list.h  options.h  options.h.in  parser.h  region_layer.h  (+14 more)
src/: activation_kernels.cu  activation_layer.cpp  activations.cpp  art.cpp  avgpool_layer.cpp  avgpool_layer_kernels.cu  batchnorm_layer.cpp  blas.cpp  blas_kernels.cu  box.cpp  captcha.cpp  cifar.cpp  classifier.cpp  coco.cpp  col2im.cpp  col2im_kernels.cu  compare.cpp  connected_layer.cpp  conv_lstm_layer.cpp  convolutional_kernels.cu  convolutional_layer.cpp  cost_layer.cpp  crnn_layer.cpp  crop_layer.cpp  crop_layer_kernels.cu  dark_cuda.cpp  data.cpp  deconvolutional_kernels.cu  deconvolutional_layer.cpp  detection_layer.cpp  detector.cpp  dice.cpp  dropout_layer.cpp  dropout_layer_kernels.cu  gemm.cpp  go.cpp  gru_layer.cpp  http_stream.cpp  im2col.cpp  im2col_kernels.cu  (+37 more)
